<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:background="@drawable/down_list"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_camera_edit"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/edit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_browse"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/browse"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/add"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>