<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_device_back"
    android:orientation="vertical" >

    <include layout="@layout/title_normal" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/listview_divider" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/device_uid"
                    android:textColor="@color/item_text" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_uid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/listview_divider" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/wifi_info"
                    android:textColor="@color/item_text" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_wifi_ssid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                     />

                <EditText
                    android:id="@+id/et_wifi_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_wifi_ssid"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                    android:hint="@string/wifi_pass"
                    android:textColorHint="@color/item_text4" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/listview_divider" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/input_device_info"
                    android:textColor="@color/item_text" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                    android:hint="@string/username"
                    android:textColorHint="@color/item_text4" />

                <EditText
                    android:id="@+id/et_old_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_username"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                    android:hint="@string/old_pass"
                    android:textColorHint="@color/item_text4" />

                <EditText
                    android:id="@+id/et_new_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_old_pass"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                    android:hint="@string/new_pass"
                    android:textColorHint="@color/item_text4" />

                <EditText
                    android:id="@+id/et_new_pass_again"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_new_pass"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ezlink_shurukuang"
                    android:hint="@string/confirm_new_pass"
                    android:textColorHint="@color/item_text4" />
            </RelativeLayout>

            <Button
                android:id="@+id/bt_connect"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login_selector"
                android:text="@string/connect"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>